--- a/.gitignore
+++ b/.gitignore
@@ -36,14 +36,14 @@ bower_components
 .lock-wscript
 
 # Compiled binary addons (https://nodejs.org/api/addons.html)
-build/Release
+*build/Release
 
 # Dependency directories
-node_modules/
-jspm_packages/
+*node_modules/
+*jspm_packages/
 
 # Snowpack dependency directory (https://snowpack.dev/)
-web_modules/
+*web_modules/
 
 # TypeScript cache
 *.tsbuildinfo
@@ -89,10 +89,10 @@ out
 
 # Nuxt.js build / generate output
 .nuxt
-dist
+*dist
 
 # Gatsby files
-.cache/
+*.cache/
 # Comment in the public line in if your project uses Gatsby and not Next.js
 # https://nextjs.org/blog/next-9-1#public-directory-support
 # public
