client response data

--- a/client/data/package.json
+++ b/client/data/package.json
@@ -2,10 +2,9 @@
 	"name": "data",
 	"version": "1.0.0",
 	"main": "index.js",
+	"type": "module",
 	"scripts": {
-		"build": "tsc",
-		"start": "node dist/index.js",
-		"dev": "nodemon"
+		"dev": "tsc && node dist/index.js"
 	},
 	"keywords": [],
 	"author": "",
@@ -13,12 +12,15 @@
 	"description": "",
 	"devDependencies": {
 		"@eslint/js": "^9.26.0",
+		"@types/lodash": "^4.17.16",
 		"@types/node": "^22.15.12",
 		"eslint": "^9.26.0",
 		"globals": "^16.0.0",
-		"nodemon": "^3.1.10",
 		"ts-node": "^10.9.2",
 		"typescript": "^5.8.3",
 		"typescript-eslint": "^8.32.0"
+	},
+	"dependencies": {
+		"lodash": "^4.17.21"
 	}
 }
