--- a/client/data/tsconfig.json
+++ b/client/data/tsconfig.json
@@ -7,7 +7,7 @@
 		"esModuleInterop": true,
 		"forceConsistentCasingInFileNames": true,
 		"outDir": "dist",
-		"rootDir": "src"
+		"rootDir": "src",
 	},
 	"include": ["src"],
 	"exclude": ["node_modules"]
