--- a/server/data/package.json
+++ b/server/data/package.json
@@ -4,7 +4,7 @@
 	"main": "src/index.js",
 	"type": "module",
 	"scripts": {
-		"dev": "nodemon src/index.js"
+		"dev": "node src/index.js"
 	},
 	"keywords": [],
 	"author": "",
