--- a/server/data/package.json
+++ b/server/data/package.json
@@ -12,7 +12,8 @@
 	"description": "",
 	"dependencies": {
 		"lodash": "^4.17.21",
-		"nodemon": "^3.1.10"
+		"nodemon": "^3.1.10",
+		"redis": "^5.0.1"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.26.0",
