--- a/server/package.json
+++ b/server/package.json
@@ -1,23 +1,26 @@
 {
-	"name": "pang",
+	"name": "data",
 	"version": "1.0.0",
-	"main": "src/index.js",
+	"main": "index.js",
 	"type": "module",
 	"scripts": {
-		"dev": "node src/index.js"
+		"dev": "tsc && node dist/index.js"
 	},
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
 	"description": "",
-	"dependencies": {
-		"lodash": "^4.17.21",
-		"nodemon": "^3.1.10",
-		"redis": "^5.0.1"
-	},
 	"devDependencies": {
 		"@eslint/js": "^9.26.0",
+		"@types/lodash": "^4.17.16",
+		"@types/node": "^22.15.12",
 		"eslint": "^9.26.0",
-		"globals": "^16.0.0"
+		"globals": "^16.0.0",
+		"ts-node": "^10.9.2",
+		"typescript": "^5.8.3",
+		"typescript-eslint": "^8.32.0"
+	},
+	"dependencies": {
+		"lodash": "^4.17.21"
 	}
 }
